# ccgo-template

./: .gitignore  CCGO.toml.md  LICENSE  README.md  copier.yml  copier_extensions.py
openspec/changes/migrate-docs-mkdoxy/: design.md  proposal.md  tasks.md
template/: .code.yml  .gitignore  CNAME.jinja  README.md.jinja  README.zh-cn.md.jinja  build.py  build_config.py.jinja  update_component.py
template/{{cpy_project_relative_path}}/: .readthedocs.yaml.jinja  CCGO.toml.jinja  CHANGELOG.md.jinja  CMakeConfig.local.cmake  CMakeLists.txt  LICENSE.jinja  README.md.jinja  build-profile.json5.jinja  build.gradle.kts  build_android.py  build_benches.py  build_config.py.jinja  build_docs.py  build_include.py  build_ios.py  build_linux.py  build_macos.py  build_ohos.py  build_tests.py  build_utils.py  build_windows.py  mkdocs.yml.jinja  oh-package.json5
template/{{cpy_project_relative_path}}/AppScope/: app.json5.jinja
template/{{cpy_project_relative_path}}/android/: build.gradle.kts  settings.gradle.kts
template/{{cpy_project_relative_path}}/android/android_native_stub/: README.md  build.gradle.kts
template/{{cpy_project_relative_path}}/android/gradle/: libs.versions.toml.jinja
template/{{cpy_project_relative_path}}/android/main_android_sdk/: proguard-rules.pro.jinja
template/{{cpy_project_relative_path}}/build-logic/convention/: build.gradle.kts
template/{{cpy_project_relative_path}}/cmake/: CMakeConfig.cmake  CMakeFunctions.cmake  CMakeUtils.cmake  ios.toolchain.cmake
template/{{cpy_project_relative_path}}/cmake/template/: External.CMakeLists.txt.in  External.Download.txt.in  Root.CMakeLists.txt.in  Src.CMakeLists.txt.in  Src.SubDir.CMakeLists.txt.in  Tests.CMakeLists.txt.in  ThirdParty.CMakeLists.txt.in
template/{{cpy_project_relative_path}}/copyright/: copyright.xml
template/{{cpy_project_relative_path}}/docs/: .readthedocs.yaml.jinja  Doxyfile.in.jinja  Doxyfile.zh-cn.in.jinja  getting-started.md.jinja  index.md.jinja  requirements.txt
template/{{cpy_project_relative_path}}/examples/app/: README.md  build.gradle.kts  settings.gradle.kts
template/{{cpy_project_relative_path}}/gradle/: libs.versions.toml.jinja
template/{{cpy_project_relative_path}}/hvigor/: hvigor-config.json5
template/{{cpy_project_relative_path}}/kmp/: .gitignore.jinja  MIGRATION_TO_NATIVE.md.jinja  NATIVE_INTEROP.md.jinja  README.md.jinja  build.gradle.kts.jinja  consumer-rules.pro.jinja  gradle.properties.jinja  settings.gradle.kts.jinja
template/{{cpy_project_relative_path}}/kmp/gradle/: libs.versions.toml.jinja
template/{{cpy_project_relative_path}}/ohos/: build-profile.json5.jinja  oh-package.json5  package.json
template/{{cpy_project_relative_path}}/{% if cpy_with_apple_ide %}apple{% endif %}/: Package.swift.jinja  README.md  {{cpy_project_relative_path}}.podspec.jinja
template/{{cpy_project_relative_path}}/{% if cpy_with_include_src_tests %}benches{% endif %}/: CMakeLists.txt  all_bench.cc.jinja
template/{{cpy_project_relative_path}}/{% if cpy_with_include_src_tests %}include{% endif %}/: CPPLINT.cfg
template/{{cpy_project_relative_path}}/{% if cpy_with_include_src_tests %}tests{% endif %}/: CMakeLists.txt  all_test.cc.jinja
template/{{cpy_project_relative_path}}/{% if cpy_with_include_src_tests %}third_party{% endif %}/: CMakeLists.txt
template/{{cpy_project_relative_path}}/{% if cpy_with_windows_ide %}windows{% endif %}/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
template/{{cpy_project_relative_path}}/{% if cpy_with_windows_ide %}windows{% endif %}/windows_native_stub/: CMakeLists.txt
(+83 files in other folders)
